[js] 게임 방법의 설명 부분 完

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <div>
                 <div>
                     <div class="modal_title wordForWord" id="howtoplayTitle">HOW TO PLAY</div>
-                    <div class="howToPlayframe" id="page1" style="visibility: hidden;">
+                    <div class="howToPlayframe" id="page1" style="visibility: hidden;">                        
                         <div class="article" id="ofTetromino">
                             <div class="article_index wordForWord" id="howto1">1</div>
                             <div class="article_item wordForWord" id="item1">
@@ -205,35 +205,35 @@
                             <div class="article_index wordForWord" id="howto3">3</div>
                             <div class="article_item wordForWord" id="item3">
                                 <div class="article_title wordForWord" id="lineclear_title">LINE CLEAR&nbsp;</div>
-                                <div class="article_content wordForWord" id="lineclear_explanation">blahblah</div>
+                                <div class="article_content wordForWord" id="lineclear_explanation"></div>
                             </div>
                         </div>
                         <div class="article" id="ofMove">
                             <div class="article_index wordForWord" id="howto4">4</div>
                             <div class="article_item wordForWord" id="item4">
                                 <div class="article_title wordForWord" id="move_title">MOVE&nbsp;</div>
-                                <div class="article_content wordForWord" id="move_explanation">blahblah</div>
+                                <div class="article_content wordForWord" id="move_explanation"></div>
                             </div>
                         </div>
                         <div class="article" id="ofGhostPiece">
                             <div class="article_index wordForWord" id="howto5">5</div>
                             <div class="article_item wordForWord" id="item5">
                                 <div class="article_title wordForWord" id="ghostpiece_title">GHOST PIECE&nbsp;</div>
-                                <div class="article_content wordForWord" id="ghostpiece_explanation">blahblah</div>
+                                <div class="article_content wordForWord" id="ghostpiece_explanation"></div>
                             </div>
                         </div>
                         <div class="article" id="ofHold">
                             <div class="article_index wordForWord" id="howto6">6</div>
                             <div class="article_item wordForWord" id="item6">
-                                <div class="article_title wordForWord" id="hold_title">HOLD&nbsp;</div>
-                                <div class="article_content wordForWord" id="hold_explanation">blahblah</div>
+                                <div class="article_title wordForWord" id="holdpiece_title">HOLD PIECE&nbsp;</div>
+                                <div class="article_content wordForWord" id="holdpiece_explanation"></div>
                             </div>
                         </div>
                         <div class="article" id="ofGameOver">
                             <div class="article_index wordForWord" id="howto7">7</div>
                             <div class="article_item wordForWord" id="item7">
                                 <div class="article_title wordForWord" id="gameover_title">GAME OVER&nbsp;</div>
-                                <div class="article_content wordForWord" id="gameover_explanation">blahblah</div>
+                                <div class="article_content wordForWord" id="gameover_explanation"></div>
                             </div>
                         </div>
                         <div id="example">
